[build-system]
requires = ["hatchling"]
build-backend = "hatchling.backends"

[project]
name = "bh-audit-logger-examples"
version = "0.1.1"
description = "Examples and integration tests for bh-audit-logger — pre-publish verification for schema vendoring, backward compatibility, and every public API surface"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
authors = [
    { name = "BH Healthcare", email = "oss@bh-healthcare.github.io" }
]

dependencies = []

[project.optional-dependencies]
dev = [
    "bh-audit-logger[jsonschema]",  # Library under test, with schema validation extra
    "pytest>=7.0.0,<9",             # Test runner
    "ruff>=0.1.0,<1",               # Linter and formatter
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
]

[tool.pytest.ini_options]
testpaths = ["tests"]
